--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "yarn node --experimental-vm-modules $(yarn bin jest)",
+    "test:cov": "yarn node --experimental-vm-modules $(yarn bin jest) --coverage"
   },
   "repository": {
     "type": "git",
@@ -14,14 +15,12 @@
   },
   "author": "Lucas Leoni",
   "license": "ISC",
-  "bugs": {
-    "url": ""
-  },
   "homepage": "",
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "jest": "^29.6.4",
     "nodemon": "^3.0.1"
   }
 }
